# phobos

./: .gitignore  CHANGELOG  Makefile.am  README.md  configure.ac  phobos.pc.in  phobos.spec.in
ci/: run-ci.sh
doc/: handling_unavailable_tapes.md  stats.md
doc/cfg/: template.conf
doc/design/: database.md
scripts/: pho_ldm_helper
src/admin/: Makefile.am  admin.c  import.c  lost.c  utils.c  utils.h
src/cli/: Makefile.am
src/cli/tests/: PhobosCLITest.py  PhobosDbTest.py
src/communication/: comm.c
src/core/common/: common.c  type_utils.c
src/core/dss/: deprecated.c  dss.c  dss_lock.c  layout.c  wrapper.c
src/core/serializer/: pho_proto_lrs.proto
src/include/: Makefile.am  pho_dss_wrapper.h  pho_layout.h  pho_type_utils.h  pho_types.h  phobos_admin.h  phobos_store.h
src/layout/: layout.c  raid_common.c
src/layout-modules/raid1/: raid1.c
src/layout-modules/raid4/: raid4.c
src/lrs/: Makefile.am  io_sched.c  io_sched.h  lrs.c  lrs_device.c  lrs_sched.c  lrs_sched.h
src/lrs/io_schedulers/: fifo.c  grouped_read.c  grouped_write.c  schedulers.h
src/store/: store.c
src/tlc/: tlc.c
tests/: pho_test_utils.c  utils.sh
tests/externs/api/: test_bad_comm.c  test_locate.c  test_store.c  test_store.test
tests/externs/cli/: Makefile.am  acceptance.test  lrs_simple_client.c  test_getmd.test  (+13 more)
tests/interns/: Makefile.am  test_dss_lazy_find_copy.c  test_dss_lock.c  test_lrs_scheduling.c  test_phobos_admin_medium_locate.c  test_store_object_md.c  test_store_object_md_get.c
tests/utils/: Makefile.am  common.c  pho_test.h  phobosd-client.c  requests.c
(+8 files in other folders)
